Add DesaClient to encapsulate DESA WS interfaces.
* replace URLConnection with jersey client; fixes query param encoding
* remove global java.net.Authenticator
* add transporter to DesaContext
* add skippable unit tests