@@ -20,6 +20,8 @@
 
     <properties>
         <slf4j.version>1.6.0</slf4j.version>
+        <!-- local junit properties -->
+        <proarc-desa.junit.properties.file>${project.basedir}/src/test/resources/junit.properties</proarc-desa.junit.properties.file>
     </properties>
 
     <dependencies>
@@ -28,6 +30,12 @@
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-rt</artifactId>
             <version>2.2.6-2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jerseyVersion}</version>
         </dependency>
 
         <dependency>
@@ -65,6 +73,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <!-- tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
@@ -136,6 +150,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
+                    <systemPropertiesFile>${proarc-desa.junit.properties.file}</systemPropertiesFile>
+                </configuration>
             </plugin>
 
         </plugins>
